added homepage link and deployment to travs file

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,12 @@ cache:
 script:
   - npm test
   - npm run build
+
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GH_TOKEN
+  local_dir: build
+  on:
+    branch: master
