--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-page",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hatwell.github.io/react-page/",
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
